[package]
name = "acme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13.0"
rouille = "3.0.0"
clap = { version = "3.0.10", features = ["derive"] }
flexi_logger = "0.17.1"
log = "0.4.14"
thiserror = "1.0"
trust-dns-server = "0.22.0"
trust-dns-resolver = "*"
trust-dns-client = "*"
trust-dns-proto = "*"

[lib]
name = "acme"
path = "src/lib.rs"

[[bin]]
name = "acme"
path = "src/bin.rs"


